syntax = "proto3";
package model;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;

// 用户
message User {
    uint64 id = 1 [(gogoproto.moretags) = "gorm:\"primary_key;\""];
    string name = 2 [(gogoproto.moretags) = "gorm:\"type:varchar(15)\" validate:\"required\" comment:\"名字\""];
    string activatedAt = 3 [(gogoproto.moretags) = "gorm:\"type:datetime(3);default:0\""];
    string password = 5 [(gogoproto.moretags) = "gorm:\"type:varchar(32)\" validate:\"gte=8,lte=15\" comment:\"密码\""];
    string email = 6 [(gogoproto.moretags) = "gorm:\"type:varchar(16)\" validate:\"email\" comment:\"邮箱\""];
    string phone = 7 [(gogoproto.moretags) = "gorm:\"type:varchar(32)\" validate:\"phone\" comment:\"手机号\""];
    uint32 gender = 8 [(gogoproto.moretags) = "gorm:\"type:tinyint(1) unsigned\""];
    string birthday = 9 [(gogoproto.moretags) = "gorm:\"type:datetime;default:0\""];
    string introduction = 10 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
    string signature = 11 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
    string avatarURL = 12 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
    string coverURL = 13 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
    string address = 14 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
    uint32 role = 24 [(gogoproto.moretags) = "gorm:\"type:tinyint(1) unsigned;default:0\""];
    string createdAt = 25 [(gogoproto.moretags) = "gorm:\"type:datetime(3);default:current_timestamp(3)\""];
    string updatedAt = 26 [(gogoproto.moretags) = "gorm:\"type:datetime(3);default:0\""];
    string bannedAt = 27 [(gogoproto.moretags) = "gorm:\"type:datetime(3);default:0\""];
    uint32 status = 28 [(gogoproto.moretags) = "gorm:\"type:tinyint(1) unsigned\""];
    string lastActiveAt = 23 [(gogoproto.moretags) = "gorm:\"type:datetime(3);default:0\""];
    uint64 score = 15 [(gogoproto.moretags) = "gorm:\"type:bigint(20);default:0\""];
    uint64 followCount = 16 [(gogoproto.moretags) = "gorm:\"type:bigint(20);default:0\""];
    uint64 followedCount = 17 [(gogoproto.moretags) = "gorm:\"type:bigint(20);default:0\""];
    uint64 articleCount = 18 [(gogoproto.moretags) = "gorm:\"type:bigint(20);default:0\""];
    uint64 momentCount = 19 [(gogoproto.moretags) = "gorm:\"type:bigint(20);default:0\""];
    uint64 diaryBookCount = 20 [(gogoproto.moretags) = "gorm:\"type:bigint(20);default:0\""];
    uint64 diaryCount = 21 [(gogoproto.moretags) = "gorm:\"type:bigint(20);default:0\""];
    uint64 commentCount = 22 [(gogoproto.moretags) = "gorm:\"type:bigint(20);default:0\""];
}

//用户分数变化日志
message UserScoreLog {
    uint64 ID = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
    uint64 userID = 2 [(gogoproto.moretags) = "gorm:\"type:bigint(20) unsigned;index\""];
    sint64 score = 3 [(gogoproto.moretags) = "gorm:\"type:bigint(20)\""];
    string reason = 5 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
    string createdAt = 6 [(gogoproto.moretags) = "gorm:\"type:datetime(3)\""];
    string remark = 7 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
}
//用户封禁日志
message UserBannedLog {
    uint64 ID = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
    uint64 userID = 2 [(gogoproto.moretags) = "gorm:\"type:bigint(20) unsigned;index\""];
    uint64 duration = 3 [(gogoproto.moretags) = "gorm:\"type:bigint(20) unsigned\""];
    string reason = 4 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
    string createdAt = 5 [(gogoproto.moretags) = "gorm:\"type:datetime(3)\""];
    string remark = 6 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
}

//用户操作日志
message UserActionLog {
    uint64 ID = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
    uint64 userID = 2 [(gogoproto.moretags) = "gorm:\"type:bigint(20) unsigned;index\""];
    uint32 action = 3 [(gogoproto.moretags) = "gorm:\"type:tinyint(1) unsigned\""]; //类型
    string location = 4 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""]; //操作地点
    string IP = 5 [(gogoproto.moretags) = "gorm:\"type:varchar(32)\""];
    string device = 6 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""]; //设备
    string createdAt = 20 [(gogoproto.moretags) = "gorm:\"type:datetime(3)\""];
    string remark = 22 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
}

// Education 教育经历
message Education {
    uint64 ID = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
    uint64 userID = 2 [(gogoproto.moretags) = "gorm:\"type:bigint(20) unsigned;index\""];
    string school = 3 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
    string speciality = 4 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""]; //专业
    string startTime = 5 [(gogoproto.moretags) = "gorm:\"type:datetime\""];
    string endTime = 6 [(gogoproto.moretags) = "gorm:\"type:datetime\""];
    string remark = 11 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""];
    string createdAt = 7 [(gogoproto.moretags) = "gorm:\"type:datetime(3)\""];
    string updatedAt = 8 [(gogoproto.moretags) = "gorm:\"type:datetime(3)\""];
    string deletedAt = 9 [(gogoproto.moretags) = "gorm:\"type:datetime(3)\""];
    uint32 status = 10 [(gogoproto.moretags) = "gorm:\"type:tinyint(1) unsigned\""];
}
// Work 职业生涯
message Work {
    uint64 ID = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
    uint64 userID = 2 [(gogoproto.moretags) = "gorm:\"type:bigint(20) unsigned;index\""];
    string company = 3 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""]; //公司或组织
    string title = 4 [(gogoproto.moretags) = "gorm:\"type:varchar(255)\""]; //职位
    string startTime = 5 [(gogoproto.moretags) = "gorm:\"type:datetime\""];
    string endTime = 6 [(gogoproto.moretags) = "gorm:\"type:datetime\""];
    string createdAt = 7 [(gogoproto.moretags) = "gorm:\"type:datetime(3)\""];
    string updatedAt = 8 [(gogoproto.moretags) = "gorm:\"type:datetime(3)\""];
    string deletedAt = 9 [(gogoproto.moretags) = "gorm:\"type:datetime(3)\""];
    uint32 status = 10 [(gogoproto.moretags) = "gorm:\"type:tinyint(1) unsigned\""];
}