syntax = "proto3";
package modelconst;
import "utils/proto/gogo/enum.proto";
import "utils/proto/go/go.proto";

option java_package = "xyz.hoper.protobuf.modelconst";
option go_package = "github.com/liov/hoper/go/v2/protobuf/modelconst";

option (gogo.enum_gqlgen_all) = true;
option (gogo.enum_prefix_all) = false;
option (go.file) = {no_enum_prefix:true};

// 评论类型
enum Index{
  option (go.enum) = {stringer_name: 'OrigString'};
  UserIndex = 0 [(gogo.enumvalue_cn)= "用户中心"];
  FlagIndex = 1 [(gogo.enumvalue_cn)= "选项"];
  SysIndex = 2 [(gogo.enumvalue_cn)= "系统"];
  CronIndex = 3 [(gogo.enumvalue_cn)= "定时任务"];
}