syntax = "proto3";
package model;

option java_package = "xyz.hoper.protobuf.user";
//暴露给外部

//用户操作
enum Action {
    A=0;
}
//用户角色
enum Role {
    R=0;
}
//用户性别
enum Gender{
    G=0;
}

//用户角色
enum UserStatus {
    U=0;
}